# cluely

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: setup_slack_app.md
src/cluely/: __init__.py  config.py  main.py
src/cluely/platform/: base.py
src/cluely/platform/slack/: app.py  commands.py  emoji_map.py  events.py  modals.py  shortcuts.py
src/cluely/storage/: base.py  models.py  sqlite_store.py
src/cluely/translation/: base.py  cache.py  deepl_provider.py  google_provider.py  openai_provider.py  registry.py
tests/: conftest.py
tests/test_platform/: test_slack_handlers.py
tests/test_storage/: test_sqlite_store.py
tests/test_translation/: test_google_provider.py  test_openai_provider.py  test_registry.py
